k8s/portal-ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-ui
spec:
  ports:
    - port: 8080
  selector:
    tier: portal-ui
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-ui
  labels:
    app: en7-frontend
spec:
  selector:
    matchLabels:
      tier: portal-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: portal-ui
    spec:
      containers:
      - image: eugeniosant/portal-ui:7.0.0.4-SNAPSHOT
        name: portal-ui
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: portal-ui
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: quickstart-portal-ui-ingress
spec:
  rules:
    - host: portal-ui-entando.10-133-66-22.nip.io
      http:
        paths:
          - path: /portal-ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: portal-ui
                port:
                  number: 8080
